# ods2sql-python

./: .pre-commit-config.yaml  AI_CURATOR_RECIPE.md  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES_0.1.1.md  mypy.ini  pyproject.toml  requirements-dev.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml
docs/adr/: 0000-record-architecture-decisions.md  0001-parse-ods-with-stdlib-zipfile-etree.md  0002-instrumentation-markers-and-aliases.md  0003-sheet-scanning-and-multiple-blocks.md  0004-type-coercion-and-null-semantics.md  0005-sql-dialects-quoting-and-identifiers.md  0006-indexing-policy-and-pk-interactions.md  0007-transactions-and-batching-performance.md  0008-duplicate-column-names-fail-fast.md  0009-output-contract-stdout-vs-stderr-and-versioning.md  0010-ai-assistance-and-curation-policy.md  README.md  TEMPLATE.md
docs/incidents/: INC-0001-dynamic-version-resolution.md  INC-0002-no-debug-prints-precommit.md  README.md  TEMPLATE.md
examples/: .gitignore  README.md  advanced.ods  people.ods  run-duckdb.sh  run-mysql.sh  run-postgres.sh  run-sqlite.sh
scripts/: check_adr_index.py  check_prints.sh  fast_tests.sh  lint_adrs.py  lint_incidents.py  smoke_percentage.py
src/: ods2sql.py
tests/: README.md  helpers.py  test_cli_contract.py  test_dialects.py  test_parser_edges.py  test_sqlite_roundtrip.py
